--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,10 @@
     <dimen name="dp_70">70dp</dimen>
     <dimen name="sp_200">200sp</dimen>
     <dimen name="sp_60">60sp</dimen>
+    <dimen name="sp_80">80sp</dimen>
+    <dimen name="dp_60">60dp</dimen>
+    <dimen name="dp_160">160dp</dimen>
+    <dimen name="dp_120">120dp</dimen>
+    <dimen name="dp_130">130dp</dimen>
+    <dimen name="dp_134">134dp</dimen>
 </resources>
