--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="dp_70">70dp</dimen>
     <dimen name="sp_200">200sp</dimen>
     <dimen name="sp_60">60sp</dimen>
+    <dimen name="dp_16">16dp</dimen>
+    <dimen name="dp_40">40dp</dimen>
 </resources>
